added caroisel image section

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -503,15 +503,33 @@
         <section class="two-column-section">
             <div class="container">
                 <div class="col col-dark">
-                    <h2 class="h2 decoration">UNE GAMME COMPLETE</h2>
+                    <h3 class="h3 decoration">UNE GAMME COMPLETE</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                    <ul>    
-                            <li>Aean auctoet urnaliirpi nteer</li>
-                            <li>Nulla fn nec ero ante ipsums faus</li>
-                            <li>Naelit magnanrerit sietincidunt</li>
+                    <ul class="arrow-list">
+                        <li> <i class="icon-arrow-right"> </i>Aean auctoet urnaliirpi nteer</li>
+                        <li> <i class="icon-arrow-right"> </i>Nulla fn nec ero ante ipsums faus</li>
+                        <li> <i class="icon-arrow-right"> </i>Naelit magnanrerit sietincidunt</li>
                     </ul>
+                    <a href="@" class="btn btn-thin">Accédez à la gamme</a>
                 </div>
                 <div class="col">
+                    <div class="owl-carousel owl-theme single-image-carousel">
+                        <div>
+                            <div class="img-holder">
+                                <img src="assets/images/single-slide-img.png" alt="carousel-image">
+                            </div>
+                        </div>
+                         <div>
+                            <div class="img-holder">
+                                <img src="assets/images/co-produit.png" alt="carousel-image">
+                            </div>
+                        </div>
+                         <div>
+                            <div class="img-holder">
+                                <img src="assets/images/ailes.png" alt="carousel-image">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
