added logos section

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -519,15 +519,110 @@
                                 <img src="assets/images/single-slide-img.png" alt="carousel-image">
                             </div>
                         </div>
-                         <div>
+                        <div>
                             <div class="img-holder">
                                 <img src="assets/images/co-produit.png" alt="carousel-image">
                             </div>
                         </div>
-                         <div>
+                        <div>
                             <div class="img-holder">
                                 <img src="assets/images/ailes.png" alt="carousel-image">
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="logos-section">
+            <div class="container">
+                <h2 class="h2 decoration-center">NOS MARQUES</h2>
+                <div class="owl-carousel owl-theme logo-carousel">
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                         Le Gaulois Professionel            
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-le-gaulois.png" alt="le Gaulois">
+                            </div>
+                           <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                         Domaine de Lanvaux   
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-domaine-lanvaux.png" alt="DOMAINE LANVAUX">
+                            </div>
+                           <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                        Loué           
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-loue.png" alt="Les Fermes LOUE Cooperative d'eleveurs">
+                            </div>
+                          <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                                    Maître CoQ Pro
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-maitre-coq.png" alt="Maitre CoQ Le Volailler">
+                            </div>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                         Le Gaulois Professionel            
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-le-gaulois.png" alt="le Gaulois">
+                            </div>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                         Domaine de Lanvaux   
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-domaine-lanvaux.png" alt="DOMAINE LANVAUX">
+                            </div>
+                         <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                        Loué           
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-loue.png" alt="Les Fermes LOUE Cooperative d'eleveurs">
+                            </div>
+                          <a href="#" class="btn btn-thin">Voir la marque</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="logo-holder">
+                            <strong class="title"> 
+                                    Maître CoQ Pro
+                         </strong>
+                            <div class="img-holder">
+                                <img src="assets/images/logo-maitre-coq.png" alt="Maitre CoQ Le Volailler">
+                            </div>
+                          <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                 </div>
