deleted unnececry files

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="owl-carousel owl-theme video-carousel">
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager1-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager1-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -78,7 +78,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -99,7 +99,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -120,7 +120,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager3-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager3-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -141,7 +141,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager4-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager4-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager5-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -183,7 +183,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="popup-link" data-fancybox data-src="#manager5-video" href="javascript:;">
+                        <a class="video-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -545,7 +545,7 @@
                             <div class="img-holder">
                                 <img src="assets/images/logo-le-gaulois.png" alt="le Gaulois">
                             </div>
-                           <a href="#" class="btn btn-thin">Voir la marque</a>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                     <div>
@@ -556,7 +556,7 @@
                             <div class="img-holder">
                                 <img src="assets/images/logo-domaine-lanvaux.png" alt="DOMAINE LANVAUX">
                             </div>
-                           <a href="#" class="btn btn-thin">Voir la marque</a>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                     <div>
@@ -567,7 +567,7 @@
                             <div class="img-holder">
                                 <img src="assets/images/logo-loue.png" alt="Les Fermes LOUE Cooperative d'eleveurs">
                             </div>
-                          <a href="#" class="btn btn-thin">Voir la marque</a>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                     <div>
@@ -600,7 +600,7 @@
                             <div class="img-holder">
                                 <img src="assets/images/logo-domaine-lanvaux.png" alt="DOMAINE LANVAUX">
                             </div>
-                         <a href="#" class="btn btn-thin">Voir la marque</a>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                     <div>
@@ -611,7 +611,7 @@
                             <div class="img-holder">
                                 <img src="assets/images/logo-loue.png" alt="Les Fermes LOUE Cooperative d'eleveurs">
                             </div>
-                          <a href="#" class="btn btn-thin">Voir la marque</a>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                     <div>
@@ -622,13 +622,46 @@
                             <div class="img-holder">
                                 <img src="assets/images/logo-maitre-coq.png" alt="Maitre CoQ Le Volailler">
                             </div>
-                          <a href="#" class="btn btn-thin">Voir la marque</a>
+                            <a href="#" class="btn btn-thin">Voir la marque</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer id="footer">
+        <div class="container">
+            <div class="top-row">
+                <div class="logo-holder">
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <span class="copy">LDC Food © 2017 <br> 
+Mentions légales</span>
+                </div>
+                <div class="contact-holder">    
+                         <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                
+                                <div class="title-text">
+                                    <strong class="name">Yuan Bichtyan</strong>
+                                    <span class="position">Export Chine</span>
+                                </div>
+                                <span class="btn btn-contact">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video" style="display:none;">
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/app.js"></script>
